# Machine-Learning-And-Deep-Learning

./: .gitignore  README.es.md  README.md  pyproject.toml
activities/: MDL_Análisis Comparativo ROC practica12.ipynb  MDL_Análisis de sentimiento practica7.ipynb  MDL_Aprendizaje No-Supervisado practica13.ipynb  MDL_Curca ROC practica 11.ipynb  MDL_MLPClassifier (Formas de Evaluación) Criticas de Cine practica9.ipynb  MDL_MLPClassifier (Formas de Evaluación) practica8.ipynb  MDL_MLPClassifier_para_clasificar_Iris practica6.ipynb  MDL_McCulloch_Pitts (AND LOGICO) Practica2.ipynb  MDL_McCulloch_Pitts (NOT LOGICO) Practica3.ipynb  MDL_McCulloch_Pitts (OR LOGICO) Practica1.ipynb  MDL_Métodos de Clasificación y Matriz de Confusión practica10.ipynb  MDL_Perceptron (Flor de Iris) practica5.ipynb  MDL_Perceptron (Frank Rosenblatt) practica4.ipynb
data/: EjemploAlgoritmosRecomendacion.csv  contractions.csv
exams/: MDL_Parcial 1.ipynb
models/: word_vectors.wordvectors
models/dqn_model/: dqn_checkpoint.pth  dqn_metrics.pkl
models/trainable_models/word2vec/: word2vec.model
