[project]
name = "machine-learning-deep-learning"
version = "0.1.0"
description = "Repository for Machine Learning and Deep Learning course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]
