[project]
name = "machine-learning-deep-learning"
version = "0.1.0"
description = "Repository for Machine Learning and Deep Learning course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gensim>=4.4.0",
  "gymnasium>=1.2.3",
  "matplotlib>=3.10.8",
  "nltk>=3.9.2",
  "numpy>=2.4.2",
  "pandas>=3.0.0",
  "rich>=14.3.3",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
